Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18689

recovery-small test 57 crashes in osp and sptlrpc

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.17.0
    • Lustre 2.17.0, Lustre 2.16.1
    • 3
    • 9223372036854775807

      Looks like a seemingly unrelated utils patch https://review.whamcloud.com/c/fs/lustre-release/+/55724 is exposing a number of crashes in osp and sptlrpc:

       [33152.842350] BUG: unable to handle kernel NULL pointer dereference at 0000000000000710
      [33152.843008] IP: [<ffffffff817dfdf8>] down_read+0x28/0x50
      [33152.843008] PGD 2c8f50067 PUD 2ced2a067 PMD 0
      [33152.843008] Oops: 0002 [#1] SMP DEBUG_PAGEALLOC
      [33152.843008] Modules linked in: lustre(OE) osp(OE) ofd(OE) lod(OE) mdt(OE) mdd(OE) mgs(OE) osd_zfs(OE) lquota(OE) lfsck(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) zfs(PO) zunicode(PO) zlua(PO) zcommon(PO) znvpair(PO) zavl(PO) icp(PO) spl(O) crc32_generic crc_t10dif crct10dif_generic crct10dif_common virtio_balloon virtio_console pcspkr i2c_piix4 ip_tables rpcsec_gss_krb5 ata_generic pata_acpi drm_kms_helper ttm drm drm_panel_orientation_quirks floppy ata_piix virtio_blk i2c_core libata serio_raw [last unloaded: libcfs]
      [33152.843008] CPU: 12 PID: 13567 Comm: lctl Kdump: loaded Tainted: P           OE  ------------   3.10.0-7.9-debug #2
      [33152.843008] Hardware name: Red Hat KVM, BIOS 1.16.0-3.module_el8.7.0+1218+f626c2ff 04/01/2014
      [33152.843008] task: ffff8802d789b760 ti: ffff8802f22f4000 task.ti: ffff8802f22f4000
      [33152.843008] RIP: 0010:[<ffffffff817dfdf8>]  [<ffffffff817dfdf8>] down_read+0x28/0x50
      [33152.843008] RSP: 0018:ffff8802f22f7da0  EFLAGS: 00010246
      [33152.843008] RAX: 0000000000000710 RBX: 0000000000000710 RCX: ffff8802f22f7fd8
      [33152.843008] RDX: 0000000000000000 RSI: 0000000000000015 RDI: ffffffff81a98ea7
      [33152.843008] RBP: ffff8802f22f7da8 R08: ffff8803260d41b0 R09: 0000000000000000
      [33152.843008] R10: 0000000000001000 R11: ffff880331406d40 R12: 0000000000000710
      [33152.843008] R13: ffff88008cbed698 R14: 0000000000000001 R15: ffff8802e8c437b8
      [33152.843008] FS:  00007f233e855740(0000) GS:ffff880331d00000(0000) knlGS:0000000000000000
      [33152.843008] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [33152.843008] CR2: 0000000000000710 CR3: 00000002e5c32000 CR4: 00000000000007e0
      [33152.843008] Call Trace:
      [33152.843008]  [<ffffffffa1535378>] active_show+0x28/0x90 [osp]
      [33152.843008]  [<ffffffffa0397166>] lustre_attr_show+0x16/0x20 [obdclass]
      [33152.843008]  [<ffffffff812d728c>] sysfs_kf_seq_show+0xcc/0x1e0
      [33152.843008]  [<ffffffff812d58b3>] kernfs_seq_show+0x23/0x30
      [33152.843008]  [<ffffffff8126f0b5>] seq_read+0x135/0x470
      [33152.843008]  [<ffffffff812d643d>] kernfs_fop_read+0x11d/0x190
      [33152.843008]  [<ffffffff81245839>] vfs_read+0xb9/0x1c0
      [33152.843008]  [<ffffffff817edf49>] ? system_call_after_swapgs+0x96/0x13a
      [33152.843008]  [<ffffffff8124676f>] SyS_read+0x7f/0xf0
      [33152.843008]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [33152.843008]  [<ffffffff817ee00c>] system_call_fastpath+0x1f/0x24
      [33152.843008]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
       [70958.908980] BUG: unable to handle kernel NULL pointer dereference at 0000000000000158
      [70958.909948] IP: [<ffffffffa14e85b1>] osp_statfs+0x2a1/0x4e0 [osp]
      [70958.909948] PGD 2b9d32067 PUD 2cd35b067 PMD 0
      [70958.909948] Oops: 0000 [#1] SMP DEBUG_PAGEALLOC
      [70958.909948] Modules linked in: lustre(OE) osp(OE) ofd(OE) lod(OE) mdt(OE) mdd(OE) mgs(OE) osd_zfs(OE) lquota(OE) lfsck(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) zfs(PO) zunicode(PO) zlua(PO) zcommon(PO) znvpair(PO) zavl(PO) icp(PO) spl(O) crc32_generic crc_t10dif crct10dif_generic crct10dif_common virtio_balloon i2c_piix4 pcspkr virtio_console ip_tables rpcsec_gss_krb5 ata_generic pata_acpi drm_kms_helper ttm drm ata_piix drm_panel_orientation_quirks floppy virtio_blk serio_raw i2c_core libata [last unloaded: libcfs]
      [70958.909948] CPU: 5 PID: 14375 Comm: lctl Kdump: loaded Tainted: P           OE  ------------   3.10.0-7.9-debug #2
      [70958.909948] Hardware name: Red Hat KVM, BIOS 1.16.0-3.module_el8.7.0+1218+f626c2ff 04/01/2014
      [70958.909948] task: ffff8800baec3760 ti: ffff8802ccf04000 task.ti: ffff8802ccf04000
      [70958.909948] RIP: 0010:[<ffffffffa14e85b1>]  [<ffffffffa14e85b1>] osp_statfs+0x2a1/0x4e0 [osp]
      [70958.909948] RSP: 0018:ffff8802ccf07cd8  EFLAGS: 00010246
      [70958.909948] RAX: 0000000000000000 RBX: ffff8800a3b00008 RCX: 0000000000000000
      [70958.909948] RDX: 0000000000000005 RSI: 0000000000000000 RDI: ffff8802d6f64d08
      [70958.909948] RBP: ffff8802ccf07d28 R08: 000000000000ffff R09: 000000000000ffff
      [70958.909948] R10: 20737365636f7250 R11: 0a64657265746e65 R12: 0000000000000000
      [70958.909948] R13: ffff8802ccf07d38 R14: 0000000000000000 R15: ffff8802842a7188
      [70958.909948] FS:  00007f8aebc05740(0000) GS:ffff880331b40000(0000) knlGS:0000000000000000
      [70958.909948] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [70958.909948] CR2: 0000000000000158 CR3: 0000000287048000 CR4: 00000000000007e0
      [70958.909948] Call Trace:
      [70958.909948]  [<ffffffff817ee00c>] ? system_call_fastpath+0x1f/0x24
      [70958.909948]  [<ffffffffa03c53f2>] filestotal_show+0x52/0x120 [obdclass]
      [70958.909948]  [<ffffffff812222d2>] ? __kmalloc_node+0x1f2/0x3e0
      [70958.909948]  [<ffffffffa0378166>] lustre_attr_show+0x16/0x20 [obdclass]
      [70958.909948]  [<ffffffff812d728c>] sysfs_kf_seq_show+0xcc/0x1e0
      [70958.909948]  [<ffffffff812d58b3>] kernfs_seq_show+0x23/0x30
      [70958.909948]  [<ffffffff8126f0b5>] seq_read+0x135/0x470
      [70958.909948]  [<ffffffff812d643d>] kernfs_fop_read+0x11d/0x190
      [70958.909948]  [<ffffffff81245839>] vfs_read+0xb9/0x1c0
      [70958.909948]  [<ffffffff817edf49>] ? system_call_after_swapgs+0x96/0x13a
      [70958.909948]  [<ffffffff8124676f>] SyS_read+0x7f/0xf0
      [70958.909948]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [70958.909948]  [<ffffffff817ee00c>] system_call_fastpath+0x1f/0x24
      [70958.909948]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
       [112319.862827] BUG: unable to handle kernel NULL pointer dereference at 00000000000000d0
      [112319.863006] IP: [<ffffffff81411a45>] do_raw_read_lock+0x5/0x30
      [112319.863006] PGD 8d49a067 PUD 8d499067 PMD 0
      [112319.863006] Oops: 0000 [#1] SMP DEBUG_PAGEALLOC
      [112319.863006] Modules linked in: lustre(OE) osp(OE) ofd(OE) lod(OE) mdt(OE) mdd(OE) mgs(OE) osd_zfs(OE) lquota(OE) lfsck(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) zfs(PO) zunicode(PO) zlua(PO) zcommon(PO) znvpair(PO) zavl(PO) icp(PO) spl(O) crc32_generic crc_t10dif crct10dif_generic crct10dif_common virtio_console virtio_balloon pcspkr i2c_piix4 ip_tables rpcsec_gss_krb5 ata_generic pata_acpi drm_kms_helper ttm drm ata_piix drm_panel_orientation_quirks serio_raw floppy virtio_blk i2c_core libata [last unloaded: libcfs]
      [112319.863006] CPU: 4 PID: 8139 Comm: lctl Kdump: loaded Tainted: P           OE  ------------   3.10.0-7.9-debug #2
      [112319.863006] Hardware name: Red Hat KVM, BIOS 1.16.0-3.module_el8.7.0+1218+f626c2ff 04/01/2014
      [112319.863006] task: ffff8800a4c48010 ti: ffff8800a9f3c000 task.ti: ffff8800a9f3c000
      [112319.863006] RIP: 0010:[<ffffffff81411a45>]  [<ffffffff81411a45>] do_raw_read_lock+0x5/0x30
      [112319.863006] RSP: 0018:ffff8800a9f3fdf8  EFLAGS: 00010202
      [112319.863006] RAX: ffff8800a9f3ffd8 RBX: 0000000000000000 RCX: 0000000000000000
      [112319.863006] RDX: fffffffffffffff4 RSI: 0000000000000001 RDI: 00000000000000c8
      [112319.863006] RBP: ffff8800a9f3fe00 R08: ffff88029dd30008 R09: ffff88029dd31158
      [112319.863006] R10: 0000000000000000 R11: ffff880331406d40 R12: 00000000000000c8
      [112319.863006] R13: ffff8800a9f3ff18 R14: 0000000000000001 R15: ffff88009b44ab58
      [112319.882548] FS:  00007fc196caf740(0000) GS:ffff880331b00000(0000) knlGS:0000000000000000
      [112319.882548] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [112319.882548] CR2: 00000000000000d0 CR3: 000000009a83a000 CR4: 00000000000007e0
      [112319.882548] Call Trace:
      [112319.882548]  [<ffffffff817e333e>] _raw_read_lock+0x1e/0x20
      [112319.882548]  [<ffffffffa0666f0e>] sptlrpc_import_sec_ref+0x1e/0x40 [ptlrpc]
      [112319.882548]  [<ffffffffa06742f0>] srpc_sptlrpc_sepol_seq_show+0x30/0x130 [ptlrpc]
      [112319.882548]  [<ffffffff8126f0b5>] seq_read+0x135/0x470
      [112319.882548]  [<ffffffff81245839>] vfs_read+0xb9/0x1c0
      [112319.882548]  [<ffffffff817edf49>] ? system_call_after_swapgs+0x96/0x13a
      [112319.882548]  [<ffffffff8124676f>] SyS_read+0x7f/0xf0
      [112319.882548]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [112319.882548]  [<ffffffff817ee00c>] system_call_fastpath+0x1f/0x24
      [112319.882548]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [112319.882548] Code: 00 eb c5 48 c7 c6 96 33 ad 81 48 89 df e8 f1 79 3c 00 eb a8 48 c7 c6 85 33 ad 81 48 89 df e8 e0 79 3c 00 eb 88 90 55 48 89 e5 53 <81> 7f 08 ed 1e af de 48 89 fb 75 11 48 89 df f0 48 ff 0f 79 05
      [112319.882548] RIP  [<ffffffff81411a45>] do_raw_read_lock+0x5/0x30
       [154763.871991] BUG: unable to handle kernel NULL pointer dereference at 0000000000000158
      [154763.872624] IP: [<ffffffffa152b5b1>] osp_statfs+0x2a1/0x4e0 [osp]
      [154763.872624] PGD 2de13d067 PUD 2ea003067 PMD 0
      [154763.872624] Oops: 0000 [#1] SMP DEBUG_PAGEALLOC
      [154763.872624] Modules linked in: lustre(OE) osp(OE) ofd(OE) lod(OE) mdt(OE) mdd(OE) mgs(OE) osd_zfs(OE) lquota(OE) lfsck(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) zfs(PO) zunicode(PO) zlua(PO) zcommon(PO) znvpair(PO) zavl(PO) icp(PO) spl(O) crc32_generic crc_t10dif crct10dif_generic crct10dif_common virtio_balloon virtio_console pcspkr i2c_piix4 ip_tables rpcsec_gss_krb5 ata_generic pata_acpi drm_kms_helper ttm drm drm_panel_orientation_quirks ata_piix serio_raw virtio_blk i2c_core libata floppy [last unloaded: libcfs]
      [154763.872624] CPU: 10 PID: 18364 Comm: lctl Kdump: loaded Tainted: P           OE  ------------   3.10.0-7.9-debug #2
      [154763.872624] Hardware name: Red Hat KVM, BIOS 1.16.0-3.module_el8.7.0+1218+f626c2ff 04/01/2014
      [154763.872624] task: ffff88031d0b9280 ti: ffff8802c02b0000 task.ti: ffff8802c02b0000
      [154763.872624] RIP: 0010:[<ffffffffa152b5b1>]  [<ffffffffa152b5b1>] osp_statfs+0x2a1/0x4e0 [osp]
      [154763.872624] RSP: 0018:ffff8802c02b3cd8  EFLAGS: 00010246
      [154763.872624] RAX: 0000000000000000 RBX: ffff8800bae1e678 RCX: 0000000000000000
      [154763.872624] RDX: 000000000000000a RSI: 0000000000000000 RDI: ffff8802f6ad74c8
      [154763.872624] RBP: ffff8802c02b3d28 R08: 000000000000ffff R09: 000000000000ffff
      [154763.872624] R10: 20737365636f7250 R11: 0a64657265746e65 R12: 0000000000000000
      [154763.872624] R13: ffff8802c02b3d38 R14: 0000000000000000 R15: ffff8802a63be318
      [154763.872624] FS:  00007fab57b90740(0000) GS:ffff880331c80000(0000) knlGS:0000000000000000
      [154763.872624] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [154763.872624] CR2: 0000000000000158 CR3: 00000002e5090000 CR4: 00000000000007e0
      [154763.872624] Call Trace:
      [154763.872624]  [<ffffffff817ee00c>] ? system_call_fastpath+0x1f/0x24
      [154763.872624]  [<ffffffffa03dbdc2>] kbytesfree_show+0x52/0x140 [obdclass]
      [154763.872624]  [<ffffffff812222d2>] ? __kmalloc_node+0x1f2/0x3e0
      [154763.872624]  [<ffffffffa038f166>] lustre_attr_show+0x16/0x20 [obdclass]
      [154763.872624]  [<ffffffff812d728c>] sysfs_kf_seq_show+0xcc/0x1e0
      [154763.872624]  [<ffffffff812d58b3>] kernfs_seq_show+0x23/0x30
      [154763.872624]  [<ffffffff8126f0b5>] seq_read+0x135/0x470
      [154763.872624]  [<ffffffff812d643d>] kernfs_fop_read+0x11d/0x190
      [154763.872624]  [<ffffffff81245839>] vfs_read+0xb9/0x1c0
      [154763.872624]  [<ffffffff817edf49>] ? system_call_after_swapgs+0x96/0x13a
      [154763.872624]  [<ffffffff8124676f>] SyS_read+0x7f/0xf0
      [154763.872624]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [154763.872624]  [<ffffffff817ee00c>] system_call_fastpath+0x1f/0x24
      [154763.872624]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [154763.872624] Code: fb 03 00 90 82 55 a1 c7 05 1d fb 03 00 19 03 00 00 c7 05 17 fb 03 00 01 00 00 00 48 c7 05 14 fb 03 00 00 00 00 00 e8 7f 78 c4 fe <41> 83 be 58 01 00 00 01 0f 85 ba fd ff ff 90 f6 05 81 4f c5 fe
      [154763.872624] RIP  [<ffffffffa152b5b1>] osp_statfs+0x2a1/0x4e0 [osp]
       [172834.743276] Lustre: Failing over lustre-MDT0000
      [172835.207288] general protection fault: 0000 [#1] SMP DEBUG_PAGEALLOC
      [172835.208046] Modules linked in: lustre(OE) osp(OE) ofd(OE) lod(OE) mdt(OE) mdd(OE) mgs(OE) osd_zfs(OE) lquota(OE) lfsck(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) zfs(PO) zunicode(PO) zlua(PO) zcommon(PO) znvpair(PO) zavl(PO) icp(PO) spl(O) crc32_generic crc_t10dif crct10dif_generic crct10dif_common i2c_piix4 pcspkr virtio_balloon virtio_console ip_tables rpcsec_gss_krb5 ata_generic drm_kms_helper pata_acpi ttm drm ata_piix drm_panel_orientation_quirks floppy serio_raw i2c_core virtio_blk libata [last unloaded: libcfs]
      [172835.208253] CPU: 3 PID: 23083 Comm: lctl Kdump: loaded Tainted: P           OE  ------------   3.10.0-7.9-debug #2
      [172835.208253] Hardware name: Red Hat KVM, BIOS 1.16.0-3.module_el8.7.0+1218+f626c2ff 04/01/2014
      [172835.208253] task: ffff88027dcd0010 ti: ffff8802dcf00000 task.ti: ffff8802dcf00000
      [172835.208253] RIP: 0010:[<ffffffffa0385646>]  [<ffffffffa0385646>] lprocfs_connect_flags_seq_show+0x36/0xc0 [obdclass]
      [172835.230730] RSP: 0018:ffff8802dcf03e20  EFLAGS: 00010202
      [172835.230730] RAX: 6b6b6b6b6b6b6b6b RBX: ffff8802e9b7e108 RCX: ffff8802dcf03fd8
      [172835.230730] RDX: 0000000000000000 RSI: 0000000000000015 RDI: ffffffff81a98ea7
      [172835.230730] RBP: ffff8802dcf03e48 R08: ffff880323f6c548 R09: ffff880323f68008
      [172835.230730] R10: 0000000000000000 R11: ffff880331406d40 R12: ffff88009962c460
      [172835.230730] R13: ffff88009962cb70 R14: 0000000000000001 R15: ffff8802e9b7e108
      [172835.271862] FS:  00007fd1c5063740(0000) GS:ffff880331ac0000(0000) knlGS:0000000000000000
      [172835.271862] CS:  0010 DS: 0000 ES: 0000 CR0: 000000008005003b
      [172835.271862] CR2: 000000000195f1b8 CR3: 0000000299d12000 CR4: 00000000000007e0
      [172835.271862] Call Trace:
      [172835.271862]  [<ffffffffa15132aa>] osp_connect_flags_seq_show+0x1a/0x30 [osp]
      [172835.271862]  [<ffffffff8126f0b5>] seq_read+0x135/0x470
      [172835.271862]  [<ffffffff81245839>] vfs_read+0xb9/0x1c0
      [172835.271862]  [<ffffffff817edf49>] ? system_call_after_swapgs+0x96/0x13a
      [172835.271862]  [<ffffffff8124676f>] SyS_read+0x7f/0xf0
      [172835.271862]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [172835.271862]  [<ffffffff817ee00c>] system_call_fastpath+0x1f/0x24
      [172835.281018]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [172835.281018] Code: 41 55 4c 8d ae 10 07 00 00 41 54 49 89 f4 53 48 89 fb 4c 89 ef 48 83 ec 08 e8 97 a7 45 e1 49 8b 84 24 70 07 00 00 48 85 c0 74 79 <4c> 8b b0 f0 02 00 00 4c 8b a0 40 03 00 00 48 c7 c6 fd 30 41 a0
      [172835.281018] RIP  [<ffffffffa0385646>] lprocfs_connect_flags_seq_show+0x36/0xc0 [obdclass]
       [259762.924209] BUG: unable to handle kernel NULL pointer dereference at 0000000000000158
      [259762.925011] IP: [<ffffffffa14f35b1>] osp_statfs+0x2a1/0x4e0 [osp]
      [259762.925011] PGD a1f4b067 PUD a02c0067 PMD 0
      [259762.925011] Oops: 0000 [#1] SMP DEBUG_PAGEALLOC
      [259762.925011] Modules linked in: lustre(OE) osp(OE) ofd(OE) lod(OE) mdt(OE) mdd(OE) mgs(OE) osd_zfs(OE) lquota(OE) lfsck(OE) obdecho(OE) mgc(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ptlrpc_gss(OE) ptlrpc(OE) obdclass(OE) ksocklnd(OE) lnet(OE) libcfs(OE) zfs(PO) zunicode(PO) zlua(PO) zcommon(PO) znvpair(PO) zavl(PO) icp(PO) spl(O) crc32_generic crc_t10dif crct10dif_generic crct10dif_common virtio_console i2c_piix4 pcspkr virtio_balloon ip_tables rpcsec_gss_krb5 ata_generic pata_acpi drm_kms_helper ttm drm drm_panel_orientation_quirks ata_piix floppy serio_raw virtio_blk i2c_core libata [last unloaded: libcfs]
      [259762.925011] CPU: 5 PID: 15936 Comm: lctl Kdump: loaded Tainted: P           OE  ------------   3.10.0-7.9-debug #2
      [259762.925011] Hardware name: Red Hat KVM, BIOS 1.16.0-3.module_el8.7.0+1218+f626c2ff 04/01/2014
      [259762.925011] task: ffff880329025c40 ti: ffff8802b5864000 task.ti: ffff8802b5864000
      [259762.925011] RIP: 0010:[<ffffffffa14f35b1>]  [<ffffffffa14f35b1>] osp_statfs+0x2a1/0x4e0 [osp]
      [259762.925011] RSP: 0018:ffff8802b5867cd8  EFLAGS: 00010246
      [259762.925011] RAX: 0000000000000000 RBX: ffff880324095d28 RCX: 0000000000000000
      [259762.925011] RDX: 0000000000000005 RSI: 0000000000000000 RDI: ffff8803214e7248
      [259762.925011] RBP: ffff8802b5867d28 R08: 000000000000ffff R09: 000000000000ffff
      [259762.925011] R10: 20737365636f7250 R11: 0a64657265746e65 R12: 0000000000000000
      [259762.925011] R13: ffff8802b5867d38 R14: 0000000000000000 R15: ffff8802ebd26f78
      [259762.925011] FS:  00007f9e76ad0740(0000) GS:ffff880331b40000(0000) knlGS:0000000000000000
      [259762.925011] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [259762.925011] CR2: 0000000000000158 CR3: 0000000090eca000 CR4: 00000000000007e0
      [259762.925011] Call Trace:
      [259762.925011]  [<ffffffff817ee00c>] ? system_call_fastpath+0x1f/0x24
      [259762.925011]  [<ffffffffa03e8512>] filesfree_show+0x52/0x120 [obdclass]
      [259762.925011]  [<ffffffff812222d2>] ? __kmalloc_node+0x1f2/0x3e0
      [259762.925011]  [<ffffffffa039b166>] lustre_attr_show+0x16/0x20 [obdclass]
      [259762.925011]  [<ffffffff812d728c>] sysfs_kf_seq_show+0xcc/0x1e0
      [259762.925011]  [<ffffffff812d58b3>] kernfs_seq_show+0x23/0x30
      [259762.925011]  [<ffffffff8126f0b5>] seq_read+0x135/0x470
      [259762.925011]  [<ffffffff812d643d>] kernfs_fop_read+0x11d/0x190
      [259762.925011]  [<ffffffff81245839>] vfs_read+0xb9/0x1c0
      [259762.925011]  [<ffffffff817edf49>] ? system_call_after_swapgs+0x96/0x13a
      [259762.925011]  [<ffffffff8124676f>] SyS_read+0x7f/0xf0
      [259762.925011]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [259762.925011]  [<ffffffff817ee00c>] system_call_fastpath+0x1f/0x24
      [259762.925011]  [<ffffffff817edf55>] ? system_call_after_swapgs+0xa2/0x13a
      [259762.925011] Code: fb 03 00 90 02 52 a1 c7 05 1d fb 03 00 19 03 00 00 c7 05 17 fb 03 00 01 00 00 00 48 c7 05 14 fb 03 00 00 00 00 00 e8 7f 48 cb fe <41> 83 be 58 01 00 00 01 0f 85 ba fd ff ff 90 f6 05 81 1f cc fe
      [259762.925011] RIP  [<ffffffffa14f35b1>] osp_statfs+0x2a1/0x4e0 [osp]
      [259762.925011]  RSP <ffff8802b5867cd8>

      https://knox.linuxhacker.ru/crashdb_ui_external.py.cgi?newid=72747

      https://knox.linuxhacker.ru/crashdb_ui_external.py.cgi?newid=72745

      https://knox.linuxhacker.ru/crashdb_ui_external.py.cgi?newid=72744

            green Oleg Drokin
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: